@startuml
'https://plantuml.com/class-diagram

ITaxableProduct <|-- TaxableProduct
TaxableProduct o-- ITaxingStrategy
ITaxingStrategy <|-- NoTaxStrategy
ITaxingStrategy <|-- RoundedPercentageStrategy

ICart <|-- Cart
ICart o-- ITaxableProduct
ICart <-- IReceipt
IReceiptPrinter <-- IReceipt
IReceiptPrinter <|-- ReceiptPrinter
IReceipt <|-- Receipt
IReceiptProduct <|-- ReceiptProduct

IReceipt *-- IReceiptProduct
ReceiptPrinter <-- IReceiptProduct

IBilledProduct <|-- BilledProduct
Cart <-- IBilledProduct
Receipt <-- IBilledProduct


interface ITaxableProduct {
    String getProduct()
    BigDecimal getPrice()
    BigDecimal getTaxedPrice()
    BigDecimal getTaxes()
}

class TaxableProduct {
    String getProduct()
    BigDecimal getPrice()
    BigDecimal getTaxedPrice()
    BigDecimal getTaxes()
}

interface ICart {
    add(ITaxableProduct, int)
    IReceipt bill()
}

class Cart {
    add(ITaxableProduct, int)
    IReceipt bill()
}

interface IReceipt {
    List<IReceiptProduct> billedItems()
    BigDecimal getTotal()
    BigDecimal getTaxes()
}

class Receipt {
    List<IReceiptProduct> billedItems()
    BigDecimal getTotal()
    BigDecimal getTaxes()
}

interface ITaxingStrategy {
    BigDecimal getTaxes(BigDecimal)
}

class NoTaxStrategy {
    BigDecimal getTaxes(BigDecimal)
}

class RoundedPercentageStrategy {
    BigDecimal getTaxes(BigDecimal)
}

interface IReceiptPrinter {
    void print(IReceipt)
}

class ReceiptPrinter {
    void print(IReceipt)
}

interface IReceiptProduct {
    String getProduct()
    int getQuantity()
    BigDecimal getPrice()
}

class ReceiptProduct {
    String getProduct()
    int getQuantity()
    BigDecimal getPrice()
}

interface IBilledProduct {
    ITaxableProduct getProduct()
    int getQuantity()
}

class BilledProduct {
    ITaxableProduct getProduct()
    int getQuantity()
}

@enduml